@@ -6,45 +6,40 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
-import lombok.AccessLevel;
-import lombok.Builder;
-import lombok.Getter;
 
-@Getter
-@Builder(access = AccessLevel.PRIVATE)
-public class StoryDto {
-  private String id;
-  private Long heroNo;
-  private String title;
-  private String content;
-  private String question;
-  private List<String> photos;
-  private List<String> videos;
-  private List<String> audios;
-  private List<StoryTagDto> tags;
-  private List<LikeDto> likes;
-  private int likeCount;
-  private LocalDate date;
-  private LocalDateTime createdAt;
+public record StoryDto(
+    String id,
+    Long heroNo,
+    String title,
+    String content,
+    String question,
+    List<String> photos,
+    List<String> videos,
+    List<String> audios,
+    List<StoryTagDto> tags,
+    List<LikeDto> likes,
+    int likeCount,
+    LocalDate date,
+    LocalDateTime createdAt
+) {
 
   public static StoryDto from(Story story, Hero hero) {
     var likeDTOs = LikeDto.listFrom(story.getLikes());
 
-    return StoryDto.builder()
-        .id(story.getId())
-        .heroNo(story.getHeroId())
-        .title(story.getTitle())
-        .content(story.getContent())
-        .question(story.getUsedQuestion())
-        .photos(Collections.emptyList()) // TODO: Gallery 시스템으로 이관됨
-        .videos(Collections.emptyList()) // TODO: Gallery 시스템으로 이관됨
-        .audios(story.getAudios())
-        .tags(List.of(StoryTagDto.from(story.getTag(hero))))
-        .likes(likeDTOs)
-        .likeCount(likeDTOs.size())
-        .date(story.getDate())
-        .createdAt(story.getCreatedAt())
-        .build();
+    return new StoryDto(
+        story.getId(),
+        story.getHeroId(),
+        story.getTitle(),
+        story.getContent(),
+        story.getUsedQuestion(),
+        Collections.emptyList(), // TODO: Gallery 시스템으로 이관됨
+        Collections.emptyList(), // TODO: Gallery 시스템으로 이관됨
+        story.getAudios(),
+        List.of(StoryTagDto.from(story.getTag(hero))),
+        likeDTOs,
+        likeDTOs.size(),
+        story.getDate(),
+        story.getCreatedAt()
+    );
   }
-
 }
